--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>My first three.js app</title>
-        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="/public/css/styles.css">
         <script type="importmap">
         {
         "imports": {
@@ -21,7 +21,7 @@
 
             <p id="hp" style="float: right; padding-right: 3px;">0</p>
         </div>
-        <script type="module" src="./main.js"></script>
+        <script type="module" src="/public/js/survival/main.js"></script>
     </body>
 </html>
     
